--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "sass-loader": "^13.2.2",
     "vue": "^3.2.36",
     "vue-router": "^4.0.13",
-    "vuetify": "^3.3.0"
+    "vuetify": "^3.3.0",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
